gcc/testsuite/gdc.test/compilable/imports/impfieldwise.d
@safe:

struct S
{
  private:
  @safe:
        int a, b;
}
