gcc/testsuite/gdc.test/fail_compilation/imports/imp18554.d
struct S
{
    private int i;
}
